hphp/test/zend/good/ext/simplexml/tests/simplexml_load_file.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("simplexml")) die("skip");
}
