hphp/test/zend/bad/Zend/tests/bug62358.php.skipif
<?php
if (getenv("USE_ZEND_ALLOC") !== "0") {
    die("skip Need Zend MM enabled");
}
?>